--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="src\MAAT\Core\Application.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Core\Assert.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Core\Core.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
@@ -97,6 +100,12 @@
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Core\MouseCodes.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\PlatformDetection.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\Timer.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Core\Timestep.h">
@@ -168,6 +177,9 @@
     <ClInclude Include="src\MAAT\Renderer\Texture.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Renderer\UniformBuffer.h">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
@@ -208,6 +220,9 @@
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLUniformBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
@@ -1538,6 +1553,9 @@
     <ClCompile Include="src\MAAT\Renderer\Texture.cpp">
       <Filter>src\MAAT\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\MAAT\Renderer\UniformBuffer.cpp">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\MAAT\Renderer\VertexArray.cpp">
       <Filter>src\MAAT\Renderer</Filter>
     </ClCompile>
@@ -1569,6 +1587,9 @@
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLUniformBuffer.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
