Initial setup of content browser panel.

--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -16,15 +16,15 @@ DockId=0x00000002,0
 
 [Window][Viewport]
 Pos=370,24
-Size=858,501
+Size=858,530
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=368,876
+Size=368,497
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1230,24
@@ -33,19 +33,27 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stats]
-Pos=370,527
-Size=858,373
+Pos=0,523
+Size=368,377
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][Content Browser]
+Pos=370,556
+Size=858,344
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=242,196 Size=1600,876 Split=X Selected=0x13926F0B
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1228,696 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Selected=0x2E9237F7
-    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1280,501 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-        DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=305,701 Selected=0x54723243
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1280,373 Selected=0x2E4EBCAA
+    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=368,497 Selected=0x2E9237F7
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=368,377 Selected=0x2E4EBCAA
+    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=685,701 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=858,530 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=858,344 Selected=0xBF096F38
+      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
   DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=370,696 Selected=0xE7039252
 
