--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -15,10 +15,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=370,24
-Size=858,530
+Pos=370,70
+Size=858,484
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000C,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
@@ -44,16 +44,24 @@ Size=858,344
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][##toolbar]
+Pos=370,24
+Size=858,44
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=242,196 Size=1600,876 Split=X Selected=0x13926F0B
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1228,696 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Split=Y Selected=0x2E9237F7
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=368,497 Selected=0x2E9237F7
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=368,377 Selected=0x2E4EBCAA
-    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=685,701 Split=Y Selected=0x13926F0B
-        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=858,530 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=858,344 Selected=0xBF096F38
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=370,696 Selected=0xE7039252
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=164,196 Size=1600,876 Split=X Selected=0x13926F0B
+  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1228,696 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Split=Y Selected=0x2E9237F7
+      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=368,497 Selected=0x2E9237F7
+      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=368,377 Selected=0x2E4EBCAA
+    DockNode        ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=685,701 Split=Y Selected=0x13926F0B
+        DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=858,530 Split=Y Selected=0x13926F0B
+          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=858,44 HiddenTabBar=1 Selected=0xF0F70764
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=858,484 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+        DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=858,344 Selected=0xBF096F38
+      DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=370,696 Selected=0xE7039252
 
