--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -1488,6 +1488,7 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Core\UUID.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MAAT\Core\Application.cpp">
@@ -1613,5 +1614,6 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\MAAT\Core\UUID.cpp" />
   </ItemGroup>
 </Project>
