--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=975,19
-Size=305,701
+Pos=1230,464
+Size=370,436
 Collapsed=0
 DockId=0x00000002,0
 
@@ -28,9 +28,9 @@ DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1230,24
-Size=370,876
+Size=370,438
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000001,0
 
 [Window][Stats]
 Pos=0,523
@@ -51,17 +51,17 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=86,133 Size=1600,876 Split=X Selected=0x13926F0B
-  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1228,696 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Split=Y Selected=0x2E9237F7
-      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=368,497 Selected=0x2E9237F7
-      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=368,377 Selected=0x2E4EBCAA
-    DockNode        ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=X
-      DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=685,701 Split=Y Selected=0x13926F0B
-        DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=858,530 Split=Y Selected=0x13926F0B
-          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=858,44 HiddenTabBar=1 Selected=0xF0F70764
-          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=858,484 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-        DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=858,344 Selected=0xBF096F38
-      DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
-  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=370,696 Selected=0xE7039252
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=112,159 Size=1600,876 Split=X Selected=0x13926F0B
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1228,696 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=368,701 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=368,497 Selected=0x2E9237F7
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=368,377 Selected=0x2E4EBCAA
+    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=858,701 Split=Y
+      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=858,530 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=858,44 HiddenTabBar=1 Selected=0xF0F70764
+        DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=858,484 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=858,344 Selected=0xBF096F38
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=370,696 Split=Y Selected=0xE7039252
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=370,438 Selected=0xE7039252
+    DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=370,436 Selected=0x54723243
 
