--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="src\MAAT\Core\Timestep.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Core\UUID.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Core\Window.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
@@ -1488,7 +1491,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\MAAT\Core\UUID.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MAAT\Core\Application.cpp">
@@ -1501,6 +1503,9 @@
       <Filter>src\MAAT\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\Core\Log.cpp">
+      <Filter>src\MAAT\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Core\UUID.cpp">
       <Filter>src\MAAT\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\Core\Window.cpp">
@@ -1614,6 +1619,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\MAAT\Core\UUID.cpp" />
   </ItemGroup>
 </Project>
